ImageDisplay css z-index fix

--- a/less/modules/imageDisplay.less
+++ b/less/modules/imageDisplay.less
@@ -23,6 +23,8 @@
 
 		backface-visibility: hidden;
 
+		z-index: 10;
+
 		.transform(translate3D(-50%, 0, 0) perspective(@3d-rotation-perspective) rotateY(0));
 
 		.transition(all 600ms ease-in-out);
