--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2217,6 +2217,7 @@ stretchRight
   background-position: center;
   box-shadow: 0px 0px 50px black;
   backface-visibility: hidden;
+  z-index: 10;
   -webkit-transform: translate3D(-50%, 0, 0) perspective(2000px) rotateY(0);
   -moz-transform: translate3D(-50%, 0, 0) perspective(2000px) rotateY(0);
   -ms-transform: translate3D(-50%, 0, 0) perspective(2000px) rotateY(0);
